--- a/_posts/2023-01-28-Sarcov2.markdown
+++ b/_posts/2023-01-28-Sarcov2.markdown
@@ -12,7 +12,7 @@ tag:
 # headerImage: true
 projects: true
 hidden: true # don't count this post in blog pagination
-description: "Description of my work in analysis of sars-cov- 2 genome"
+description: "Description of my work in analysis of sars-cov-2 genome"
 category: project
 author: arunaa
 externalLink: false
@@ -29,4 +29,4 @@ Furthermore, structural analysis aids in the study of viral mutations and their 
 <br>
 The comprehensive training and hands-on exercises equipped me with the skills to independently analyze complex biological data and contribute effectively to bioinformatics research. On successful completion of the course, I was awarded a participation certificate, which acknowledges my proficiency in bioinformatics tools and techniques. This knowledge not only enhances my understanding of viral pathogens but also prepares me to contribute to ongoing efforts in combating the COVID-19 pandemic and future infectious disease outbreaks.
 
-[def]: /assets/images/s
+<!-- [def]: /assets/images/s -->
