--- a/_posts/2023-01-28-Sarcov2.markdown
+++ b/_posts/2023-01-28-Sarcov2.markdown
@@ -1,6 +1,6 @@
 ---
 # fields to edit: title, date, description, tag, body
-title: "Analysis of the SARS-CoV-2 Genome Using NCBI and UCSC Genome browser"
+title: "🧬🔎Analysis of the SARS-CoV-2 Genome Using NCBI and UCSC Genome browser"
 layout: post
 date: 2023-05-05 2:22
 tag: 
